<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/reset_password_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background_normal" >

    <ScrollView
        android:id="@id/reset_password_main_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/reset_password_title_layout" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10.0dip" >

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dip"
                android:background="@color/line_normal" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingLeft="15.0dip"
                    android:text="@string/reset_password_new_password_text"
                    android:textSize="16.0sp" />

                <EditText
                    android:id="@id/reset_password_new_password_input"
                    android:layout_width="fill_parent"
                    android:layout_height="44.0dip"
                    android:background="#00000000"
                    android:hint="@string/reset_password_new_password_hint"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLength="50"
                    android:paddingRight="15.0dip"
                    android:singleLine="true"
                    android:textColorHint="@color/text_hint"
                    android:textSize="16.0sp" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dip"
                android:background="@color/line_normal" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingLeft="15.0dip"
                    android:text="@string/reset_password_renew_password_text"
                    android:textSize="16.0sp" />

                <EditText
                    android:id="@id/reset_password_renew_password_input"
                    android:layout_width="fill_parent"
                    android:layout_height="44.0dip"
                    android:background="#00000000"
                    android:hint="@string/reset_password_renew_password_hint"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLength="50"
                    android:paddingRight="15.0dip"
                    android:singleLine="true"
                    android:textColorHint="@color/text_hint"
                    android:textSize="16.0sp" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dip"
                android:background="@color/line_normal" />

            <Button
                android:id="@id/reset_password_submit_button"
                android:layout_width="fill_parent"
                android:layout_height="44.0dip"
                android:layout_margin="20.0dip"
                android:background="@drawable/button_normal"
                android:text="@string/reset_password_submit_button"
                android:textColor="#ffffffff"
                android:textSize="18.0sp" />
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@id/loading"
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        android:layout_below="@id/reset_password_title_layout"
        android:background="#cc333333"
        android:gravity="center"
        android:visibility="gone" >

        <ProgressBar
            android:id="@id/progress_bar"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="24dip"
            android:layout_height="24dip"
            android:layout_centerVertical="true"
            android:indeterminate="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dip"
            android:layout_toRightOf="@id/progress_bar"
            android:text="@string/loading"
            android:textColor="#ffffffff" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@id/reset_password_title_layout"
        android:layout_width="fill_parent"
        android:layout_height="44.0dip"
        android:background="@color/background_navbar" >

        <TextView
            android:id="@id/reset_password_title_text"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:ellipsize="middle"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/reset_password_title_text"
            android:textColor="@color/text_title"
            android:textSize="18.0sp" />

        <Button
            android:id="@id/reset_password_title_back_button"
            android:layout_width="40.0dip"
            android:layout_height="fill_parent"
            android:layout_centerVertical="true"
            android:background="#00000000"
            android:drawableLeft="@drawable/button_back"
            android:paddingLeft="10.0dip"
            android:text="" />
    </RelativeLayout>

</RelativeLayout>