<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ff333333" >

    <GridView
        android:id="@id/pick_photo_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/pick_photo_title_layout"
        android:cacheColorHint="@android:color/transparent"
        android:clipChildren="true"
        android:gravity="center"
        android:horizontalSpacing="3dip"
        android:listSelector="@android:color/transparent"
        android:numColumns="3"
        android:stretchMode="columnWidth"
        android:verticalSpacing="3dip" >
    </GridView>

    <RelativeLayout
        android:id="@id/loading"
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        android:layout_below="@id/pick_photo_title_layout"
        android:background="#99000000"
        android:clickable="true"
        android:gravity="center"
        android:visibility="gone" >

        <ProgressBar
            android:id="@id/progress_bar"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="24dip"
            android:layout_height="24dip"
            android:layout_centerVertical="true"
            android:indeterminate="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dip"
            android:layout_toRightOf="@id/progress_bar"
            android:text="@string/loading"
            android:textColor="#ffffffff" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@id/pick_photo_footer_layout"
        android:layout_width="fill_parent"
        android:layout_height="44.0dip"
        android:layout_alignParentBottom="true"
        android:background="#99000000"
        android:clickable="true" >

        <TextView
            android:id="@id/pick_photo_footer_pathname_text"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:paddingLeft="10.0dip"
            android:text="@string/pick_photo_folder_pathname_text"
            android:textColor="#ffffffff" />

        <ImageView
            android:id="@id/pick_photo_footer_expand_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5.0dip"
            android:layout_toRightOf="@id/pick_photo_footer_pathname_text"
            android:contentDescription="@string/desc"
            android:scaleType="centerInside"
            android:src="@drawable/arrow_bottom_white" />

        <TextView
            android:id="@id/pick_photo_footer_total_text"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:paddingRight="10.0dip"
            android:text="@string/pick_photo_folder_total_text"
            android:textColor="#ffffffff" />
    </RelativeLayout>

    <LinearLayout
        android:id="@id/pick_photo_title_layout"
        android:layout_width="fill_parent"
        android:layout_height="44.0dip"
        android:background="#ff000000" >

        <Button
            android:id="@id/pick_photo_title_back_button"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#00000000"
            android:drawableLeft="@drawable/button_back"
            android:drawablePadding="5.0dip"
            android:gravity="center_vertical"
            android:paddingLeft="10.0dip"
            android:text="@string/pick_photo_title_text"
            android:textColor="@color/text_title"
            android:textSize="18.0sp" />
    </LinearLayout>

</RelativeLayout>