<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background_highlight"
    android:padding="20.0dip" >

      <RelativeLayout
        android:id="@+id/discover_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="10.0dip" >

        <ImageButton
            android:id="@id/discover_listitem_avatar_button"
            android:layout_width="80.0dip"
            android:layout_height="80.0dip"
            android:background="#00000000"
            android:contentDescription="@string/desc"
            android:scaleType="centerInside"
            android:src="@drawable/avatar_null" />

        <ProgressBar
            android:id="@+id/discover_listitem_avatar_loading"
            android:layout_width="20.0dip"
            android:layout_height="20.0dip"
            android:layout_centerInParent="true"
            android:visibility="gone" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/discover_left"
        android:orientation="vertical" >

        <TextView
            android:id="@id/discover_listitem_name_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/app_name"
            android:textSize="16.0sp" />

        

        <TextView
            android:id="@id/discover_listitem_content_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10.0dip"
            android:layout_marginTop="5.0dip"
            android:singleLine="false"
            android:text="@string/app_name"
            android:textSize="14.0sp" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5.0dip" >
             <Button
                android:id="@id/discover_listitem_blessit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="#00000000"
                android:drawableLeft="@drawable/button_blessit"
                android:drawablePadding="5.0dip"
                android:text="@string/blessit"
                android:textColor="@drawable/button_pressed_text_color" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>