<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/show_discover_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background_normal" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/show_discover_title_layout"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="20.0dip" >

            <ImageButton
                android:id="@id/show_discover_avatar_button"
                android:layout_width="40.0dip"
                android:layout_height="40.0dip"
                android:layout_marginLeft="10.0dip"
                android:layout_marginRight="15.0dip"
                android:background="#00000000"
                android:contentDescription="@string/desc"
                android:scaleType="centerInside"
                android:src="@drawable/avatar_null" />



            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/show_discover_avatar_button"
                android:orientation="vertical" >

                

                <TextView
                    android:id="@id/show_discover_desc_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2.0dip"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/app_name"
                    android:textColor="@color/text_gray"
                    android:textSize="12.0sp" />

                <TextView
                    android:id="@id/show_discover_content_text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10.0dip"
                    android:layout_marginTop="5.0dip"
                    android:singleLine="false"
                    android:text="@string/app_name"
                    android:textSize="14.0sp" />

          
            </LinearLayout>
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dip"
            android:background="@color/line_normal" />

        
    </LinearLayout>

    <RelativeLayout
        android:id="@id/loading"
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        android:layout_below="@id/discover_title_layout"
        android:background="#ff333333"
        android:gravity="center"
        android:visibility="gone" >

        <ProgressBar
            android:id="@id/progress_bar"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="24dip"
            android:layout_height="24dip"
            android:layout_centerVertical="true"
            android:indeterminate="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dip"
            android:layout_toRightOf="@id/progress_bar"
            android:text="@string/loading"
            android:textColor="#ffffffff" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@id/show_discover_title_layout"
        android:layout_width="fill_parent"
        android:layout_height="44.0dip"
        android:background="@color/background_navbar" >

        <TextView
            android:id="@id/show_discover_title_text"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:ellipsize="middle"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/show_discover_title_text"
            android:textColor="@color/text_title"
            android:textSize="18.0sp" />

        <Button
            android:id="@id/show_discover_title_back_button"
            android:layout_width="40.0dip"
            android:layout_height="fill_parent"
            android:layout_centerVertical="true"
            android:background="#00000000"
            android:drawableLeft="@drawable/button_back"
            android:paddingLeft="10.0dip"
            android:text="" />
    </RelativeLayout>

</RelativeLayout>